--- a/test-paper/index.html
+++ b/test-paper/index.html
@@ -23,17 +23,17 @@
     </tr>
     <tr>
         <td>班级：</td>
-        <td><input name="class" type="text" value="1班"></td>
+        <td><input name="class" type="text" placeholder="1班"></td>
         <td>学号：</td>
-        <td><input name="id" type="text" value="001"></td>
+        <td><input name="id" type="text" placeholder="001"></td>
         <td>姓名：</td>
-        <td><input name="name" type="text" value="王小闹"></td>
+        <td><input name="name" type="text" placeholder="王小闹"></td>
     </tr>
 </table>
 <h3>一、填空题（每空5分，共20分）</h3>
 <ol>
-    <li>UML的中文全称是：<input name="firstOne" type="text" value="统一建模语言"></li>
-    <li>对象最突出的特征是：<input name="firstTwoOne" type="text" value="封装性"> <input name="firstTwoTwo" type="text" value="继承性"> <input name="firstTwoThree" type="text" value="多态性"></li>
+    <li>UML的中文全称是：<input name="firstOne" type="text" placeholder="统一建模语言"></li>
+    <li>对象最突出的特征是：<input name="firstTwoOne" type="text" placeholder="封装性"> <input name="firstTwoTwo" type="text" placeholder="继承性"> <input name="firstTwoThree" type="text" placeholder="多态性"></li>
 </ol>
 <h3>二、选择题（每题10分，共20分）</h3>
 <ol>
@@ -70,12 +70,12 @@
 <h3>四、判断题（每题10分，共20分）</h3>
 <ol>
     <li>用例图只是用于和客户交流和沟通的，用于确定需求。
-        <label><input name="firstTrueOrFalse" type="radio" value="">√</label>
-        <label><input name="firstTrueOrFalse" type="radio" value="">×</label>
+        <label><input name="firstTrueOrFalse" type="radio" value="">&radic;</label>
+        <label><input name="firstTrueOrFalse" type="radio" value="">&times;</label>
     </li>
     <li>在状态图中，终止状态在一个状态图中允许有任意多个。
-        <label><input name="secondTrueOrFalse" type="radio" value="">√</label>
-        <label><input name="secondTrueOrFalse" type="radio" value="">×</label>
+        <label><input name="secondTrueOrFalse" type="radio" value="">&radic;</label>
+        <label><input name="secondTrueOrFalse" type="radio" value="">&times;</label>
     </li>
 </ol>
 <h3>五、简答题（每题20分，共20分）</h3>
